# scopus-recsys-job

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/job/: main.py
src/job/helpers/: __init__.py  classify.py  db.py  download.py  embed.py  similarity.py
src/job/models/: __init__.py  output.py
src/job/sql/init/: algorithm-application-link.sql  algorithm-embedding.sql  algorithm-similarity.sql  application-embedding.sql  application-similarity.sql  classification.sql  db.sql  paper.sql
src/job/sql/optimize/: algorithm-embedding.sql  algorithm-similarity.sql  application-embedding.sql  application-similarity.sql
src/job/sql/populate/: algorithm-application-link.sql
